test/performance/vectorization/vectorizeOnly/nonIterableErrorMessage/vectorizeOnlyInvalidIterable.chpl
// ensure we get the same error message when iterating over something that's
// not iterable whether we're using 'foreach' or not.

foreach i in 1 do writeln(i);
